--- a/styles1.css
+++ b/styles1.css
@@ -61,6 +61,7 @@ h1 {
 	color: #ffffff;
 	font-weight: normal;
 	margin: 0 10px;
+	padding: 20px;
 }
 
 .dog1 {
@@ -74,7 +75,7 @@ h1 {
 form {
 	margin: auto;
 	position: relative;
-	top: 100px;
+	top: 45px;
 	text-align: left;
 	width: 33%;
 }
